--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "compression": "^1.6.2",
+    "express": "^4.15.3",
     "superagent": "^3.5.2"
   },
   "scripts": {
-    "start": "babel-node src",
+    "start": "yarn dev:start",
+    "dev:start": "nodemon --ignore lib --exec babel-node src/server",
+    "prod:build": "rimraf lib && babel src -d lib --ignore .test.js",
+    "prod:start": "cross-env NODE_ENV=production pm2 start lib/server && pm2 logs",
+    "prod:stop": "pm2 delete server",
     "test": "eslint src && jest --coverage",
-    "precommit": "yarn test",
-    "prepush": "yarn test"
+    "prepush": "yarn test && yarn prod:build"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -18,6 +23,7 @@
     "babel-jest": "^20.0.3",
     "babel-preset-env": "^1.5.2",
     "babel-preset-flow": "^6.23.0",
+    "cross-env": "^5.0.1",
     "eslint": "^3",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-compat": "^1.0.4",
@@ -27,7 +33,10 @@
     "eslint-plugin-react": "^7.1.0",
     "flow-bin": "^0.49.1",
     "husky": "^0.14.1",
-    "jest": "^20.0.4"
+    "jest": "^20.0.4",
+    "nodemon": "^1.11.0",
+    "pm2": "^2.5.0",
+    "rimraf": "^2.6.1"
   },
   "browserslist": [
     "> 1%"
