--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,9 @@
     "compat/compat": 2
   },
   "env": {
-    "browser": true,
-    "jest": true
+    "browser": true
+  },
+  "settings": {
+    "polyfills": ["fetch"]
   }
 }
