--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "compression": "^1.6.2",
     "express": "^4.15.3",
     "isomorphic-fetch": "^2.2.1",
+    "moment": "^2.18.1",
     "proxyquire": "^1.8.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
